fix: missing playlist duration and created + column alignment

--- a/meteor/client/styles/rundownList.scss
+++ b/meteor/client/styles/rundownList.scss
@@ -1,6 +1,8 @@
 // Root playlist/rundown list, see RundownList.tsx
 .rundown-list {
-	--componentWidth: calc(100%);
+	//  the width of the floating right status bar
+	--statusBarWidth: 2.1rem;
+	--componentWidth: calc(100% - var(--statusBarWidth));
 	--defaultSpacing: 20px;
 	--defaultItemBackgroundColor: #f6f6f6;
 	--descendantItemBackgroundColor: #e5e5e5;
@@ -8,6 +10,7 @@
 
 	background-color: transparent;
 	width: 100%;
+	padding-right: var(--statusBarWidth);
 
 	.rundown-list__header {
 		background-color: #898989;
@@ -18,41 +21,65 @@
 
 	.rundown-list-item__name {
 		display: inline-block;
-		width: 25%;
+		width: calc(var(--componentWidth) * 0.25);
 
 		.draghandle {
 			cursor: grab;
 			margin-right: var(--defaultSpacing);
 			width: var(--defaultSpacing);
 
-			svg {
-				height: 15px;
-				width: 15px;
+			button {
+				all: unset;
+				display: inline-flex;
+				align-self: center;
+
+				svg {
+					height: 1em;
+					width: 1em;
+					top: 0.125em;
+					position: relative;
+				}
 			}
 		}
 	}
 	.rundown-list-item__showStyle {
 		display: inline-block;
-		width: 30%;
+		width: calc(var(--componentWidth) * 0.26);
 	}
 	.rundown-list-item__airTime,
 	.rundown-list-item__status,
 	.rundown-list-item__duration,
 	.rundown-list-item__created {
 		display: inline-block;
-		width: 10%;
+		width: calc(var(--componentWidth) * 0.11);
 	}
 	.rundown-list-item__actions {
-		display: inline-block;
-		width: 5%;
-
-		> .action-btn {
-			width: 1.5em;
-		}
+		display: inline-grid;
+		grid-template-columns: 1fr 1fr;
+		width: calc(var(--componentWidth) * 0.05);
 	}
 
 	&.droptarget {
 		border: 4px dashed green;
+	}
+
+	.rundown-list-item__action {
+		all: unset;
+		display: inline-flex;
+		align-self: center;
+		cursor: pointer;
+		height: 100%;
+
+		&:not(:last-child) {
+			margin-right: var(--defaultSpacing);
+		}
+
+		svg {
+			height: 1em;
+			width: 1em;
+			top: 0.125em;
+			position: relative;
+		}
 	}
 
 	// the actual playlists and rundowns
@@ -67,17 +94,22 @@
 
 			.rundown-playlist__header {
 				background-color: var(--defaultItemBackgroundColor);
+				padding: 0 var(--defaultSpacing);
 
 				.rundown-playlist__heading {
 					display: inline-block;
+					margin-left: 0;
+
+					.rundown-playlist__heading-text {
+						margin-left: 0.5em;
+					}
 				}
 			}
 
 			.rundown-playlist__rundowns {
-				--leftGutterWidth: calc(2 * var(--defaultSpacing));
-
 				padding: 0;
 				margin: 0;
+				--leftGutterWidth: calc(2 * var(--defaultSpacing));
 
 				// overrides for rundowns inside of playlists
 				.rundown-list-item {
@@ -114,19 +146,19 @@
 
 					// recalc widths to line up with columns outside of playlists
 					.rundown-list-item__name {
-						width: calc((100% - var(--leftGutterWidth)) * 0.25 - var(--leftGutterWidth) / 2);
+						width: calc((var(--componentWidth) - var(--leftGutterWidth)) * 0.25 - var(--leftGutterWidth) / 2);
 					}
 					.rundown-list-item__showStyle {
-						width: calc((100% + var(--leftGutterWidth)) * 0.3);
+						width: calc((var(--componentWidth) + var(--leftGutterWidth)) * 0.26);
 					}
 					.rundown-list-item__airTime,
 					.rundown-list-item__status,
 					.rundown-list-item__duration,
 					.rundown-list-item__created {
-						width: calc((100% + var(--leftGutterWidth)) * 0.1);
+						width: calc((var(--componentWidth) + var(--leftGutterWidth)) * 0.11);
 					}
 					.rundown-list-item__actions {
-						width: calc((100% + var(--leftGutterWidth)) * 0.05);
+						width: calc((var(--componentWidth) + var(--leftGutterWidth)) * 0.05);
 					}
 				}
 			}
@@ -141,9 +173,16 @@
 			background-color: var(--defaultItemBackgroundColor);
 			box-shadow: 0px 8px 10px -10px rgba(0, 0, 0, 0.15);
 			margin: 0 0 6px;
-			padding: 5px var(--defaultSpacing) 7px;
+			padding: 0 var(--defaultSpacing);
 			list-style-type: none;
 			vertical-align: middle;
+
+			.rundown-list-item__text {
+				padding: 7px 0;
+			}
+			.rundown-list-item__actions {
+				padding: 0 0 3px; // cater for icons being larger than the font
+			}
 
 			&.unsynced {
 				background-image: repeating-linear-gradient(
